[gd_scene load_steps=7 format=3 uid="uid://cvnkj7x0t0mm0"]

[ext_resource type="Script" path="res://objects/entities/players/mario_series/scripts/character_2d.gd" id="1_ip4jw"]
[ext_resource type="PackedScene" uid="uid://bd6pmuly2nay5" path="res://objects/entities/players/mario_series/#powers/mario_small.tscn" id="2_8ugd8"]
[ext_resource type="PackedScene" uid="uid://cprsxw7scpvfp" path="res://objects/#components/health_component/health_component.tscn" id="2_x6kso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwlpc"]
size = Vector2(22, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onwop"]
size = Vector2(22, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w37l"]
size = Vector2(18, 2)

[node name="Mario" type="EntityBody2D"]
gravity = 2500.0
max_falling_speed = 500.0
collision_mask = 2
script = ExtResource("1_ip4jw")
nickname = &"Mario"
metadata/controllable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_bwlpc")
debug_color = Color(0, 0.647059, 0.2, 0.419608)

[node name="AreaBody" type="Area2D" parent="."]
collision_mask = 116
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBody"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_onwop")
debug_color = Color(0.952941, 0.219608, 0, 0.419608)

[node name="AreaHead" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 114
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHead"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_1w37l")
debug_color = Color(0.721569, 0.25098, 1, 0.419608)

[node name="MarioSmall" parent="." instance=ExtResource("2_8ugd8")]
process_mode = 4

[node name="HealthComponent" parent="." instance=ExtResource("2_x6kso")]
